--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -4,16 +4,20 @@ server {
     server_name _;
     server_tokens off;
 
-    root /app/;
+    root /src/app/src;
     index index.php;
 
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
+    location ~ /\. {
+        deny all;
+    }
+
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass php:9000;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME /src/app/src$fastcgi_script_name;
     }
 }
