--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,4 +1,6 @@
-FROM php:8.3.18RC1-fpm-alpine3.21
+FROM php:8.3-fpm-alpine
+
+WORKDIR /src/app
 
 ENV RUN_DEPS \
     zlib \
@@ -29,9 +31,7 @@ RUN apk add --no-cache --virtual .build-deps $BUILD_DEPS \
 
 RUN apk add --no-cache --virtual .run-deps $RUN_DEPS
 
-RUN echo 'memory_limit = -1' >> /usr/local/etc/php/conf.d/docker-php-memlimit.ini;
+RUN echo 'memory_limit = 2G' >> /usr/local/etc/php/conf.d/docker-php-memlimit.ini;
 
 # Copy the application code
-COPY . /app
-
-VOLUME ["/app"]
+COPY . /src/app
